Update package.json with correct GitHub repository URLs

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "Solar LLM and Embeddings nodes for n8n",
   "license": "MIT",
-  "homepage": "https://github.com/yourusername/n8n-nodes-solar",
+  "homepage": "https://github.com/ehpyeon/n8n-nodes-solar",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/n8n-nodes-solar.git"
+    "url": "https://github.com/ehpyeon/n8n-nodes-solar.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -57,5 +57,8 @@
   "author": {
     "name": "Euihyeon Pyeon",
     "email": "euihyeon.pyeon@gmail.com"
+  },
+  "bugs": {
+    "url": "https://github.com/ehpyeon/n8n-nodes-solar/issues"
   }
 }
