--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "n8n-nodes-solar",
-  "version": "0.3.0",
+  "version": "0.2.1",
   "description": "Solar LLM and Embeddings nodes for n8n",
   "license": "MIT",
   "homepage": "https://github.com/ehpyeon/n8n-nodes-solar",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ehpyeon/n8n-nodes-solar.git"
+    "url": "git+https://github.com/ehpyeon/n8n-nodes-solar.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
