Fix import paths - use relative paths instead of TypeScript aliases (v0.3.3)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,7 @@
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "typeRoots": ["node_modules/@types"],
-    "baseUrl": "./src",
-    "paths": {
-      "@utils/*": ["utils/*"]
-    }
+    "typeRoots": ["node_modules/@types"]
   },
   "include": [
     "src/**/*"
